[package]
name = "dreamtide"
version = "2.0.0"
description = "Dreamtide: Reverie of the Last Magus"
authors = ["Maksymilian Dendura"]
edition = "2021"
rust-version = "1.77.2"

[lib]
name = "dreamtide_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-log = "2"
tauri-plugin-process = "2"

[features]
# Reduces binary size in release builds.
custom-protocol = ["tauri/custom-protocol"]
